feat: insert hcm users on bold

--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,24 @@
 GEMINI_API_KEY=""
 ANTHROPIC_API_KEY=""
 CLAUDE_API_KEY=""
+
+# BOLD HCM insert settings
+BOLD_API_BASE_URL=""
+BOLD_SERVICE_URL=""
+BOLD_URL_PATH=""
+BOLD_AUTH_URL=""
+BOLD_API_KEY=""
+BOLD_CLIENT_ID=""
+BOLD_CLIENT_SECRET=""
+BOLD_GRANT_TYPE="client_credentials"
+BOLD_SCOPE=""
+BOLD_TENANT=""
+BOLD_FRONT_OFFICE_TENANT_ID=""
+BOLD_HOME_OFFICE_ID=""
+BOLD_USER_TYPE_ID=""
+BOLD_AUTH_TIMEOUT="10"
+BOLD_CALL_TIMEOUT="30"
+BOLD_CACHE_TIMEOUT="300"
+
+# Optional: if provided, auth call is skipped and this token is used directly
+BOLD_BEARER_TOKEN=""
