feat: changes for talent users

--- a/.env-example
+++ b/.env-example
@@ -16,6 +16,7 @@ BOLD_TENANT=""
 BOLD_FRONT_OFFICE_TENANT_ID=""
 BOLD_HOME_OFFICE_ID=""
 BOLD_USER_TYPE_ID=""
+BOLD_TALENT_FRONT_OFFICE_ID=""
 BOLD_AUTH_TIMEOUT="10"
 BOLD_CALL_TIMEOUT="30"
 BOLD_CACHE_TIMEOUT="300"
